cards mobile stretch fixed

--- a/general.css
+++ b/general.css
@@ -42,6 +42,11 @@
   }
 
   .social-icon:hover {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+
+  .social-icon:not(:hover) {
     opacity: 0.75;
   }
 
